# GitMetrics

./: .gitignore  CONFIGURATION.md  README.md  config.yaml  daily.yaml  dev-requirements.txt  pyproject.toml  setup.py  summarize_config.yaml  tasks.py  traffic_config.yaml  weekly.yaml
.github/workflows/: daily.yaml  daily_collection.yaml  daily_summarize.yaml  lint.yaml  manual.yaml  traffic_collection.yaml  weekly.yaml  weekly_collection.yaml
docs/: COLLECTED_DATA.md  DEVELOPMENT.md  SETUP.md  USAGE.md
github_analytics/: __init__.py  __main__.py  consolidate.py  constants.py  drive.py  main.py  metrics.py  output.py  slack_utils.py  summarize.py  utils.py
github_analytics/github/: client.py  repository.py  repository_owner.py  traffic.py  users.py
gitmetrics/: __init__.py  __main__.py  consolidate.py  main.py  metrics.py  output.py  slack_utils.py  summarize.py  time_utils.py
gitmetrics/github/: __init__.py  client.py  repository.py  repository_owner.py  traffic.py  users.py
notebooks/: GitHub Metrics v3.ipynb
oss_metrics/: __init__.py  __main__.py  drive.py  main.py  output.py  utils.py
oss_metrics/github/: client.py  repository.py  users.py
oss_stats/: .__main__.py.swp  __init__.py  __main__.py  main.py  output.py
oss_stats/github/: __init__.py  client.py  graphql.py.bak  repository.py  users.py
