[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-analytics"
version = "0.0.1.dev0"
description = "Scripts to extract multiple metrics from Github Projects."
readme = "README.md"
authors = [
    { name = "DataCebo", email = "info@datacebo.com" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas>=1.4.0;python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1;python_version>='3.12' and python_version<'3.13'",
    "pandas>=2.2.3;python_version>='3.13'",
    "tqdm",
    "openpyxl",
    "xlsxwriter",
    "requests",
    "python-benedict",
    "PyYAML",
    "PyDrive"
]

[project.urls]
Homepage = "https://github.com/DataCebo/github-analytics"

[project.scripts]
github-analytics = "github_analytics.__main__:main"

[tool.setuptools.packages.find]
include = ['github_analytics', 'github_analytics.*']

[project.optional-dependencies]
dev = [
    "ruff>=0.4.5,<1",
    "invoke"
]
