[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-analytics"
version = "0.0.1.dev0"
description = "Scripts to extract multiple metrics from Github Projects."
readme = "README.md"
authors = [
    { name = "DataCebo", email = "info@datacebo.com" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas>=1.4.0;python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1;python_version>='3.12' and python_version<'3.13'",
    "pandas>=2.2.3;python_version>='3.13'",
    "tqdm",
    "openpyxl",
    "xlsxwriter",
    "requests",
    "python-benedict",
    "PyYAML",
    "PyDrive"
]

[project.urls]
Homepage = "https://github.com/DataCebo/github-analytics"

[project.scripts]
github-analytics = "github_analytics.__main__:main"

[tool.setuptools.packages.find]
include = ['github_analytics', 'github_analytics.*']

[project.optional-dependencies]
dev = [
    "ruff>=0.4.5,<1",
    "invoke"
]

[tool.ruff]
preview = true
line-length = 100
indent-width = 4
src = ["github_analytics"]
exclude = [
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    "*.ipynb",
    ".ipynb_checkpoints",
    "tasks.py",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # isort
    "I001",
    # print statements
    "T201",
    # pandas-vet
    "PD",
    # numpy 2.0
    "NPY201"

]
ignore = [
    # pydocstyle
    "D107",  # Missing docstring in __init__
    "D417",   # Missing argument descriptions in the docstring, this is a bug from pydocstyle: https://github.com/PyCQA/pydocstyle/issues/449
    "PD901",
    "PD101",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
preview = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["github_analytics"]
lines-between-types = 0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
"errors.py" = ["D105"]
"tests/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100
